--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,8 @@
         </div>
       </div>
     </header>
-    <div class="oj-web-applayout-content"></div>
+    <oj-module role="main" class="oj-web-applayout-content oj-web-applayout-max-width"
+      config="[[moduleAdapter.koObservableConfig]]"></oj-module>
     <footer role="contentinfo" class="oj-web-applayout-footer">
       <div class="oj-web-applayout-footer-item oj-web-applayout-max-width">
         <a href="https://www.oracle.com/webfolder/technetwork/jet/index.html">About Oracle JET</a>
